zy10023/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-guardian
  labels:
    name: api-guardian
